# prezento

./: README.rst  pyproject.toml
docs/: CHANGELOG.rst
docs/tools/: build.sh
src/prezento/: __init__.py  main.py
tools/: build.sh  clean.sh  readme.rst  rst2tags4geany.py  slido_ls.py
