[project]
name = "prezento"
version = "1.0.3"
authors = [
  { name="Ahmad Yoosofan", email="yoosofan@gmx.com" },
]
description = "Another text based (rst) presentation tool"

readme = "README.rst"
license = "GPL-3.0-or-later"
license-files = ["LICENSE.txt"]

requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Text Processing :: Markup :: reStructuredText",
]

keywords = ["presentation", "restructuredtext", "rst", "slides", "docutils"]


dependencies = [
    "docutils >= 0.21",
    "pygments >= 2.20",
    "graphviz >= 0.20",
    "pillow   >= 12.1",
]
[project.urls]
Homepage = "https://github.com/yoosofan/prezento"
Issues = "https://github.com/yoosofan/prezento/issues"
Source = "https://github.com/yoosofan/prezento"
Changelog   = "https://github.com/yoosofan/prezento/blob/main/docs/CHANGELOG.rst"

[project.scripts]
prezento = "prezento.main:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prezento*"]
